--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/cosmos-atom-logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/ocr-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Interchain Oracle" />
+    <meta name="description" content="On-Chain Registry" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <meta property="og:title" content="Interchain Oracle" />
+    <meta property="og:title" content="On-Chain Registry" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Interchain Oracle</title>
+    <title>On-Chain Registry</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
